fix alignmet

--- a/css/styles.css
+++ b/css/styles.css
@@ -10010,6 +10010,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 .text-white-50 {
   color: rgba(255, 255, 255, 0.78) !important;
+  text-align: left;
 }
 
 .text-hide {
